	  data.
	* Validate the hash on incoming BoB data objects (for custom smileys
	  etc.), cache based per JID when the CID is not a valid hash (as
	  specified by the BoB XEP).
	* Send whitespace keepalives if we haven't sent data in a while (2
	  minutes).  This fixes an issue with Openfire disconnecting a
	  libpurple-baesd client that has just been quiet for about 6
	  minutes.

	Yahoo/Yahoo JAPAN:
	* Attempt to better handle transparent proxies interfering with
	  HTTP-based login.
	* Fix handling of P2P packets, thus fixing the loss of some messages.
	* Retrieve the pager server address from Yahoo!'s servers directly.
	* Removed the "Pager server" account option, as it is no longer needed.
	* The authentication code is now less order-sensitive with the
	  components of the server's response.
	* The authentication process now acts more like the official client.

	Finch:
	* New action 'history-search', with default binding ctrl+r, to search
	  the entered string in the input history.

version 2.6.6 (02/18/2010):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages
	  to be improperly converted to XHTML.
	* Set "controlling-mode" correctly when initializing a media session.
	  Fixes receiving voice calls from Psi.
	* When looking up DNS records, use the type of record returned by the
	  server (instead of the type we asked for) to determine how to process
	  the record.
	* Fix an issue with parsing XML attributes that contain "&lt;br&gt;".
	  See ChangeLog.API for more details.

	General:
	* Correctly disable all missing dependencies when using the
	  --disable-missing-dependencies option.  (Gabriel Schulhof)

	Gadu-Gadu:
	* Fix display of avatars after a server-side change. (Krzysztof
	  Klinikowski)

	AIM:
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 50x50 were allowed.

	MSN: